--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "starter",
+  "name": "our-farm",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "author": "Kislev Levy",
   "license": "ISC",
   "description": "",
   "devDependencies": {
