--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "our-farm",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "author": "Kislev Levy",
   "license": "ISC",
   "description": "",
