--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "our-farm",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Kislev Levy",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/node": "^20.12.12"
+    "nodemon": "^3.1.0"
   }
 }
